tidied up spacing - need to fix large screen view

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -141,7 +141,7 @@ ul {
       font-size: 5rem;
       color: #ffffff;
       margin-bottom: 0;
-      letter-spacing: 0.15rem;
+      letter-spacing: 0.05rem;
       line-height: 0.7;
 
       span {
@@ -162,12 +162,12 @@ ul {
       color: #ffffff;
       margin-bottom: 1rem;
       font-weight: 100;
-      letter-spacing: 0.15rem;
+      letter-spacing: 0.05rem;
     }
   
   .nav-link  {
       font-size: 0.9rem;
-      letter-spacing: 0.15rem;
+      letter-spacing: 0.05rem;
       font-weight: 800;
       color: #ffffff;
       margin-bottom: 0.5rem;
@@ -184,7 +184,7 @@ ul {
 
     .nav-link-email {
       font-size: 0.9rem;
-      letter-spacing: 0.15rem;
+      letter-spacing: 0.05rem;
       font-weight: 800;
       color: #FD7F20;
       margin: 0;
@@ -202,7 +202,7 @@ ul {
       display: flex;
       justify-content: flex-start;
       gap: 1.5rem;
-      margin-top: 1.5rem;
+      margin-top: 1.25rem;
   
       .social-icon {
         font-size: 1.5rem;
@@ -218,7 +218,7 @@ ul {
       }
     }
   
-    #footer-mobile {
+    #footer-desktop {
       margin-top: 2rem;
       display: none;
 
@@ -230,15 +230,18 @@ ul {
         font-size: 0.7rem;
         font-weight: 400;
         color: #ffffff;
-        letter-spacing: 0.15rem;
+        letter-spacing: 0.05rem;
       }
     }
   }
 }
 
-#footer-desktop {
+#footer-mobile {
   margin-bottom: 1rem;
-  display: block;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 
   @media screen and (min-width:480px) {
     display: none;
@@ -248,7 +251,7 @@ ul {
     font-size: 0.7rem;
     font-weight: 400;
     color: #ffffff;
-    letter-spacing: 0.15rem;
+    letter-spacing: 0.05rem;
   }
 }
 
@@ -279,7 +282,7 @@ ul {
     font-weight: 700;
     color: #FD7F20;
     margin-bottom: 1rem;
-    letter-spacing: 0.15rem;
+    letter-spacing: 0.05rem;
     text-transform: uppercase;
 
     &:hover {
@@ -293,8 +296,9 @@ ul {
     color: #ffffff;
     border-top: 0.2rem #000000 solid;
     margin: 1.8rem 0 0.15rem 0;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.05rem;
     line-height: 1.1;
+    padding-right: 0;
 
     .first {
       margin: 0 0 0.15rem 0;
@@ -306,6 +310,11 @@ ul {
     font-weight: 400;
     color: #888888;
     margin-bottom: 0.5rem;
+    padding-right: 0;
+
+    @media screen and (min-width:480px)  {
+      padding-right: 5rem;
+    }
 
     &.top {
       margin-bottom: 0;
@@ -369,7 +378,7 @@ ul {
     gap: 1rem;
     margin-top: 0.75rem;
 
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:1024px) {
       flex-direction: row;
     }
 
@@ -428,11 +437,10 @@ ul {
       line-height: 1.3;
       font-weight: 400;
       color: #FD7F20;
-      letter-spacing: 0.1rem;
+      letter-spacing: 0.05rem;
 
       @media screen and (min-width:480px) {
         font-size: 0.75rem;
-        letter-spacing: 0.15rem;
       }
     }
   }
